--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry]
 name = "foundation-cancer-image-biomarker"
 version = "0.0.1"
-description = "`foundation-cancer-image-biomarker` is the official python package for [INSERT DOI]"
+description = "Official repo for "Foundation Models for Quantitative Biomarker Discovery in Cancer Imaging [INSERT DOI]"
 readme = "README.md"
 authors = ["Suraj Pai <bspai@bwh.harvard.edu>"]
 license = "MIT"
