--- a/.gitignore
+++ b/.gitignore
@@ -615,3 +615,6 @@ healthchecksdb
 MigrationBackup/
 
 # End of https://www.gitignore.io/api/osx,python,pycharm,windows,visualstudio,visualstudiocode
+*.dcm
+*.torch
+dist/
