Updates to YAML and preprocessing

--- a/experiments/supervised_training/foundation_finetune.yaml
+++ b/experiments/supervised_training/foundation_finetune.yaml
@@ -39,7 +39,7 @@ system:
     model:
         _target_: fmcib.ssl.models.LoadPretrainedResnet3D
         pretrained: "./models/ssl/fmcib.torch" 
-        heads: [4096, 2048, 512, 256, 8] # Note: Change to [4096, 2048, 512, 256, 1] for Task 2 and Task 3
+        heads: [4096, 2048, 8] # Note: Change to [4096, 2048, 512, 256, 1] for Task 2 and Task 3
 
     post_criterion_activation: "$torch.nn.functional.softmax" # Note: Change to $torch.sigmoid for Task 2 and Task 3
     criterion:
@@ -74,8 +74,8 @@ system:
 
     train_dataset:
         _target_: fmcib.datasets.SSLRadiomicsDataset
-        path: "./data/preprocessing/deeplesion/annotations/task1_train.csv"
-        label: "Coarse_lesion_type"
+        path: "./data/preprocessing/deeplesion/annotations/task1_train.csv" # Note: Change path
+        label: "Coarse_lesion_type" # Note: Change to "malignancy" for Task 2 and "survival" for Task 3
         radius: 25
         orient: True # Set orient to False for task 2 and task 3
         resample_spacing: [1, 1, 1]
@@ -102,7 +102,7 @@ system:
 
     val_dataset:
         _target_: fmcib.datasets.SSLRadiomicsDataset
-        path: "./data/preprocessing/deeplesion/annotations/task1_val.csv"
+        path: "./data/preprocessing/deeplesion/annotations/task1_val.csv" # Note: Change path
         label: "@system#train_dataset#label"
         radius: "@system#train_dataset#radius"
         orient: "@system#train_dataset#orient"
@@ -121,7 +121,7 @@ system:
                   
     test_dataset:
         _target_: fmcib.datasets.SSLRadiomicsDataset
-        path: "./data/preprocessing/deeplesion/annotations/task1_test.csv"
+        path: "./data/preprocessing/deeplesion/annotations/task1_test.csv" # Note: Change path
         label: "@system#train_dataset#label"
         radius: "@system#train_dataset#radius"
         orient: "@system#train_dataset#orient"
@@ -140,7 +140,7 @@ system:
     
     predict_dataset:
         _target_: fmcib.datasets.SSLRadiomicsDataset
-        path: "./data/preprocessing/deeplesion/annotations/task1_test.csv"
+        path: "./data/preprocessing/deeplesion/annotations/task1_test.csv" # Note: Change path
         label: "@system#train_dataset#label"
         radius: "@system#train_dataset#radius"
         orient: "@system#train_dataset#orient"
