--- a/experiments/supervised_training/supervised_finetune.yaml
+++ b/experiments/supervised_training/supervised_finetune.yaml
@@ -40,11 +40,12 @@ system:
     model:
         _target_: fmcib.ssl.models.LoadPretrainedResnet3D
         pretrained: "./models/supervised/task1_supervised.torch" # Note: Only for Task 2 and Task 3
-        heads: [4096, 2048, 512, 256, 1] 
+        heads: [4096, 2048, 1] 
 
-    post_criterion_activation: "$torch.sigmoid" # Note: Change to torch.sigmoid for Task 2 and Task 3
+    post_criterion_activation: "$torch.sigmoid" # Note: Change to $torch.sigmoid for Task 2 and Task 3
+    cast_target_dtype_to: "$torch.float32"
     criterion:
-        _target_: torch.nn.BCEWithLogitsLoss
+        _target_: torch.nn.BCEWithLogitsLoss # Note: Change to torch.nn.BCEWithLogitsLoss for Task 2 and Task 3
 
     optimizers:
         _target_: torch.optim.SGD
@@ -63,19 +64,22 @@ system:
     train_metrics: 
         - _target_: torchmetrics.AveragePrecision
           task: binary
+          # num_classes: 8 # Note: Change to `binary` for Task 2 and Task 3 and remove num_classes below
 
         - _target_: torchmetrics.AUROC
-          task: binary
+          task: binary # Note: Change to `binary` for Task 2 and Task 3 and remove num_classes below
+          # num_classes: 8 
+
 
     val_metrics: "@system#train_metrics"
     test_metrics: "@system#train_metrics"
 
     train_dataset:
         _target_: fmcib.datasets.SSLRadiomicsDataset
-        path: "./data/preprocessing/luna16/annotations/task2_train.csv" # Note: Change path for task
-        label: "malignancy"
+        path: "./data/preprocessing/luna16/annotations/task2_train.csv"  # Note: Change path
+        label: "malignancy" # Note: Change to appropriate label column, e.g. "malignancy" for Task 2 and "survival" for Task 3
         radius: 25
-        orient: True # Set orient to False for task 2 and task 3
+        orient: False # Note: Set orient to False for task 2 and task 3
         resample_spacing: [1, 1, 1]
         enable_negatives: False
         transform:
@@ -100,7 +104,7 @@ system:
 
     val_dataset:
         _target_: fmcib.datasets.SSLRadiomicsDataset
-        path: "./data/preprocessing/luna16/annotations/task2_val.csv"  # Note: Change path for task
+        path: "./data/preprocessing/luna16/annotations/task2_val.csv"  # Note: Change path
         label: "@system#train_dataset#label"
         radius: "@system#train_dataset#radius"
         orient: "@system#train_dataset#orient"
@@ -119,7 +123,7 @@ system:
                   
     test_dataset:
         _target_: fmcib.datasets.SSLRadiomicsDataset
-        path: "./data/preprocessing/luna16/annotations/task2_test.csv"  # Note: Change path for task
+        path: "./data/preprocessing/luna16/annotations/task2_test.csv"  # Note: Change path
         label: "@system#train_dataset#label"
         radius: "@system#train_dataset#radius"
         orient: "@system#train_dataset#orient"
@@ -138,7 +142,7 @@ system:
     
     predict_dataset:
         _target_: fmcib.datasets.SSLRadiomicsDataset
-        path: "./data/preprocessing/luna16/annotations/task2_test.csv" # Note: Change path for task
+        path: "./data/preprocessing/luna16/annotations/task2_test.csv"  # Note: Change path
         label: "@system#train_dataset#label"
         radius: "@system#train_dataset#radius"
         orient: "@system#train_dataset#orient"
