--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "foundation-cancer-image-biomarker"
-version = "0.0.1a4"
+version = "0.0.1a17"
 description = "Official repo for Foundation Models for Quantitative Biomarker Discovery in Cancer Imaging [INSERT DOI]"
 readme = "README.md"
 authors = ["Suraj Pai <bspai@bwh.harvard.edu>"]
@@ -35,7 +35,7 @@ classifiers = [  #! Update me
 
 [tool.poetry.dependencies]
 python = "^3.8"
-project-lighter = {version = "^0.0.2a2", allow-prereleases = true}
+project-lighter = {version = "^0.0.2a5", allow-prereleases = true}
 wget = "^3.2"
 google-cloud-storage = "^2.9.0"
 thedicomsort = "^1.0.1"
@@ -44,6 +44,8 @@ nibabel = "^5.1.0"
 matplotlib = "^3.7.1"
 platipy = "0.4.1"
 pynrrd = "^1.0.0"
+pydicom-seg = "^0.4.1"
+pydicom = "^2.4.0"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.1"
