Add note: to orient

--- a/experiments/supervised_training/foundation_finetune.yaml
+++ b/experiments/supervised_training/foundation_finetune.yaml
@@ -79,7 +79,7 @@ system:
         path: "./data/preprocessing/deeplesion/annotations/task1_train.csv" # Note: Change path
         label: "Coarse_lesion_type" # Note: Change to "malignancy" for Task 2 and "survival" for Task 3
         radius: 25
-        orient: True # Set orient to False for task 2 and task 3
+        orient: True # Note: Set orient to False for task 2 and task 3
         resample_spacing: [1, 1, 1]
         enable_negatives: False
         transform:
