--- a/experiments/get_predictions.yaml
+++ b/experiments/get_predictions.yaml
@@ -6,10 +6,7 @@ trainer:
     accelerator: gpu
     devices: 1
     log_every_n_steps: 50
-    logger:
-        _target_: pytorch_lightning.loggers.CSVLogger
-        save_dir: "./logs"
-
+    logger: False
     callbacks:
         - _target_: fmcib.callbacks.SavePredictions
           path: "out.csv" # Note: Change path to the CSV file to save predictions to.
