--- a/experiments/get_predictions.yaml
+++ b/experiments/get_predictions.yaml
@@ -18,9 +18,11 @@ system:
     num_workers: 0
     model:
         _target_: fmcib.ssl.models.LoadPretrainedResnet3D
-        pretrained: "./models/supervised/task1_foundation_finetuned.torch"
-        heads: [4096, 2048, 512, 256, 8] # Note: Change to [4096, 2048, 512, 256, 1] for Task 2 and Task 3
+        pretrained: "./models/supervised/task1_supervised.torch"
+        heads: [4096, 2048, 8] # Note: Change to [4096, 2048, 1] for Task 2 and Task 3
 
+    post_criterion_activation: "$torch.nn.functional.softmax" # Note: Change to $torch.sigmoid for Task 2 and Task 3
+    # cast_target_dtype_to: "$torch.float32" # Note: Uncomment for Task 2 and Task 3
     criterion: null
     optimizers: null
     schedulers: null
