--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ pynrrd = "^1.0.0"
 pydicom-seg = "^0.4.1"
 pydicom = "^2.4.0"
 torch = "2.0.0"
+itk = "^5.3.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
