--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "foundation-cancer-image-biomarker"
-version = "0.0.1a18"
+version = "0.0.1a20"
 description = "Official repo for Foundation Models for Quantitative Biomarker Discovery in Cancer Imaging [INSERT DOI]"
 readme = "README.md"
 authors = ["Suraj Pai <bspai@bwh.harvard.edu>"]
@@ -32,7 +32,7 @@ classifiers = [  #! Update me
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.12"
 project-lighter = {version = "0.0.2a6", allow-prereleases = true}
 wget = "^3.2"
 google-cloud-storage = "^2.9.0"
@@ -46,6 +46,7 @@ pydicom-seg = "^0.4.1"
 pydicom = "^2.4.0"
 torch = "2.0.0"
 itk = "^5.3.0"
+scipy = "1.10.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
