--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,9 @@ pydicom = "^2.4.0"
 torch = "2.0.0"
 itk = "^5.3.0"
 scipy = "1.10.0"
+fonttools = "^4.44.0"
+pydantic = "1.10.13"
+lightly = "1.4.19"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
