--- a/experiments/pretraining/simclr_pretrain.yaml
+++ b/experiments/pretraining/simclr_pretrain.yaml
@@ -4,16 +4,15 @@ trainer:
   max_epochs: 100
   check_val_every_n_epoch: 5
   accelerator: gpu
-  strategy: ddp_find_unused_parameters_false
+  strategy: ddp
   devices: 2
   sync_batchnorm: True
-  precision: 16
   log_every_n_steps: 1
   logger: False
     
   callbacks:
     - _target_: pytorch_lightning.callbacks.ModelCheckpoint
-      dirpath:  ./checkpoints
+      dirpath:  /mnt/data1/RadiomicsFoundationModel/checkpoints/modsimclr
       verbose: True
       save_last: True
       every_n_epochs: 1
@@ -23,7 +22,7 @@ trainer:
       project: ssl_radiomics_pretrain
       log_dir: ./logs
       tensorboard: False
-      wandb: False
+      wandb: True
       input_type: image
       pred_type: histogram
       max_samples: 10
@@ -48,14 +47,17 @@ system:
           widen_factor: 2
           conv1_t_stride: 2
           feed_forward: False
-            
+
     criterion:
-      _target_: fmcib.ssl.losses.NTXentNegativeMinedLoss
+      _target_: fmcib.ssl.losses.NegativeMiningInfoNCECriterion
+      embedding_dim: 128
+      batch_size: "@system#batch_size"
       temperature: 0.1
       gather_distributed: True
+      world_size: "@trainer#devices"
 
     optimizers:
-      _target_: fmcib.ssl.optimizers.LARS
+      _target_: fmcib.optimizers.LARS
       params: "$@system#model.parameters()"
       lr: "$((@system#batch_size * @trainer#devices)/256) * 0.3" # Compute LR dynamically for different batch sizes
       weight_decay: 1.0e-6
@@ -74,7 +76,7 @@ system:
     
     train_dataset:
       _target_: fmcib.datasets.SSLRadiomicsDataset
-      path: "../data/preprocessing/deeplesion/annotations/pretrain.csv"
+      path: "./data/preprocessing/deeplesion/annotations/pretrain.csv"
       orient: True
       resample_spacing: [1, 1, 1]
       transform:
@@ -82,18 +84,12 @@ system:
         transforms:
           - _target_: monai.transforms.ToTensor
           - _target_: monai.transforms.AddChannel
-          - _target_: monai.transforms.ScaleIntensityRange
-            a_min: -1024
-            a_max: 3072
-            b_min: 0
-            b_max: 1
-            clip: True      
-          - _target_: fmcib.ssl.transforms.Duplicate
+          - _target_: fmcib.transforms.Duplicate
             transforms1:
               _target_: torchvision.transforms.Compose
               transforms:
                 # Random Transforms begin
-                - _target_: fmcib.ssl.transforms.RandomResizedCrop3D
+                - _target_: fmcib.transforms.RandomResizedCrop3D
                   size: 50
                 - _target_: monai.transforms.RandAxisFlip
                   prob: 0.5
@@ -103,7 +99,12 @@ system:
                   prob: 0.5
                 - _target_: monai.transforms.SpatialPad
                   spatial_size: [50, 50, 50]
-
+                - _target_: monai.transforms.ThresholdIntensity
+                  threshold: -1024
+                  cval: -1024                  
+                - _target_: monai.transforms.NormalizeIntensity
+                  subtrahend: -1024
+                  divisor: 3072
             transforms2: "@#transforms1"
     val_dataset: null
     test_dataset: null
