--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,9 @@ pydicom = "^2.4.0"
 torch = "2.0.0"
 itk = "^5.3.0"
 scipy = "1.10.0"
+aiohttp = "^3.8.6"
+fonttools = "^4.44.1"
+pydantic = "^2.5.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
