--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,8 @@ scipy = "1.10.0"
 aiohttp = "^3.8.6"
 fonttools = "^4.44.1"
 pydantic = "^2.5.0"
+urllib3 = "^2.1.0"
+werkzeug = "^3.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
