--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,9 @@ pydantic = "1.10.13"
 lightly = "1.4.19"
 werkzeug = "^3.0.1"
 urllib3 = "^2.1.0"
+aiohttp = "^3.9.1"
+pip = "^23.3.2"
+tornado = "^6.4"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
