--- a/experiments/baselines/med3d/supervised_training/get_predictions_task2.yaml
+++ b/experiments/baselines/med3d/supervised_training/get_predictions_task2.yaml
@@ -17,7 +17,7 @@ system:
     pin_memory: True
     num_workers: 3
     model:
-        _target_: fmcib.models.LoadPretrainedModel
+        _target_: fmcib.models.LoadModel
         trunk:
           _target_: monai.networks.nets.resnet50
           widen_factor: 1
