--- a/experiments/baselines/models_genesis/supervised_training/get_predictions_task1.yaml
+++ b/experiments/baselines/models_genesis/supervised_training/get_predictions_task1.yaml
@@ -17,7 +17,7 @@ system:
     pin_memory: True
     num_workers: 2
     model:
-        _target_: fmcib.models.LoadPretrainedModel
+        _target_: fmcib.models.LoadModel
         trunk:
           _target_: fmcib.models.ModelsGenesisUNet3D
           decoder: False
