--- a/experiments/baselines/supervised_training/supervised_random_init.yaml
+++ b/experiments/baselines/supervised_training/supervised_random_init.yaml
@@ -34,7 +34,12 @@ system:
     drop_last_batch: True 
     num_workers: 3
     model:
-        _target_: fmcib.ssl.models.LoadPretrainedResnet3D
+        _target_: fmcib.models.LoadModel
+        trunk:
+          _target_: monai.networks.nets.resnet50
+          widen_factor: 2
+          n_input_channels: 1
+          feed_forward: False
         heads: [4096, 2048, 8] # Note: Change to [4096, 2048, 1] for Task 2 and [4096, 2048, 512, 256, 1] for Task 3
 
     post_criterion_activation: "$torch.nn.functional.softmax" # Note: Change to $torch.sigmoid for Task 2 and Task 3
