--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ aiohttp = "^3.9.1"
 pip = "^23.3.2"
 tornado = "^6.4"
 wandb = "^0.16.3"
+mpmath = "1.3.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
