--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ tornado = "^6.4"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
-bandit = "^1.7.1"
+bandit = "^1.7.7"
 isort = {extras = ["colors"], version = "^5.10.1"}
 mypy = "^0.910"
 mypy-extensions = "^0.4.3"
@@ -72,6 +72,7 @@ coverage = "^6.1.2"
 coverage-badge = "^1.1.0"
 pytest-html = "^3.1.1"
 pytest-cov = "^3.0.0"
+aiohttp = "^3.9.3"
 
 [tool.black]
 # https://github.com/psf/black
