--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
 name: build
 
 on:
-  - push:
+  push:
     branches:
       - master
-  - pull_request:
+  pull_request:
     branches:
       - master
 
